--- a/distracted_driver_detection.ipynb
+++ b/distracted_driver_detection.ipynb
@@ -600,7 +600,10 @@
       "7160/7175 [============================>.] - ETA: 1s - loss: 1.7288 - acc: 0.3851Epoch 00002: val_loss improved from 3.07245 to 2.58792, saving model to saved_models/weights.best.from_scratch.hdf5\n",
       "7175/7175 [==============================] - 1041s - loss: 1.7287 - acc: 0.3851 - val_loss: 2.5879 - val_acc: 0.2469\n",
       "Epoch 4/10\n",
-      "6760/7175 [===========================>..] - ETA: 54s - loss: 1.6204 - acc: 0.4256"
+      "7160/7175 [============================>.] - ETA: 1s - loss: 1.6152 - acc: 0.4284Epoch 00003: val_loss improved from 2.58792 to 2.14433, saving model to saved_models/weights.best.from_scratch.hdf5\n",
+      "7175/7175 [==============================] - 1047s - loss: 1.6151 - acc: 0.4283 - val_loss: 2.1443 - val_acc: 0.2759\n",
+      "Epoch 5/10\n",
+      "3860/7175 [===============>..............] - ETA: 460s - loss: 1.5422 - acc: 0.4541"
      ]
     }
    ],
@@ -732,7 +735,7 @@
     "\n",
     "np.save(open('bottleneck_features/driver_VGG16_train.npy', 'wb'), bottleneck_features_train)\n",
     "\n",
-    "del bottleneck_features_train\n",
+    "bottleneck_features_train = np.load('bottleneck_features/driver_VGG16_train.npy')\n",
     "\n",
     "\n",
     "\n",
@@ -748,7 +751,7 @@
     "\n",
     "np.save(open('bottleneck_features/driver_VGG16_valid.npy', 'wb'), bottleneck_features_valid)\n",
     "\n",
-    "del bottleneck_features_valid"
+    "bottleneck_features_valid = np.load('bottleneck_features/driver_VGG16_valid.npy')"
    ]
   },
   {
@@ -759,8 +762,8 @@
    },
    "outputs": [],
    "source": [
-    "bottleneck_features_train = np.load('bottleneck_features/driver_VGG16_train.npy')\n",
-    "bottleneck_features_valid = np.load('bottleneck_features/driver_VGG16_valid.npy')"
+    "# bottleneck_features_train = np.load('bottleneck_features/driver_VGG16_train.npy')\n",
+    "# bottleneck_features_valid = np.load('bottleneck_features/driver_VGG16_valid.npy')"
    ]
   },
   {
@@ -1471,7 +1474,7 @@
     "\n",
     "np.save(open('bottleneck_features/driver_ResNet50_train.npy', 'wb'), bottleneck_features_train)\n",
     "\n",
-    "del bottleneck_features_train\n",
+    "bottleneck_features_train = np.load('bottleneck_features/driver_ResNet50_train.npy')\n",
     "\n",
     "\n",
     "\n",
@@ -1487,7 +1490,7 @@
     "\n",
     "np.save(open('bottleneck_features/driver_ResNet50_valid.npy', 'wb'), bottleneck_features_valid)\n",
     "\n",
-    "del bottleneck_features_valid"
+    "bottleneck_features_valid = np.load('bottleneck_features/driver_ResNet50_valid.npy')"
    ]
   },
   {
@@ -1498,8 +1501,8 @@
    },
    "outputs": [],
    "source": [
-    "bottleneck_features_train = np.load('bottleneck_features/driver_ResNet50_train.npy')\n",
-    "bottleneck_features_valid = np.load('bottleneck_features/driver_ResNet50_valid.npy')"
+    "# bottleneck_features_train = np.load('bottleneck_features/driver_ResNet50_train.npy')\n",
+    "# bottleneck_features_valid = np.load('bottleneck_features/driver_ResNet50_valid.npy')"
    ]
   },
   {
